--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "es6"
-  },
   "include": [
     "*.js",
-    "**/*.js",
-    "c:\\Users\\3903172\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.0\\p5types\\global.d.ts"
+    "libraries/*.js",
+    "c:\\Users\\grady\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.8.2\\p5types\\global.d.ts"
   ]
 }
