--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,5 @@
     "*.js",
     "libraries/*.js",
     "c:\\Users\\3903172\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.0\\p5types\\global.d.ts"
-  ]
+, "classes_folder/Projectile.js"  ]
 }
